--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
