--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.5.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "scrollreveal": "^4.0.9",
     "tailwindcss": "^4.1.4",
     "web-vitals": "^2.1.4"
   },
