--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "framer-motion": "^12.12.1",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
