--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.16.0",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
@@ -22,7 +22,9 @@
     "react-scripts": "5.0.1",
     "scrollreveal": "^4.0.9",
     "tailwindcss": "^4.1.4",
+    "three": "^0.177.0",
     "vanilla-tilt": "^1.8.1",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
